--- a/marvel/spiderman.html
+++ b/marvel/spiderman.html
@@ -6,7 +6,7 @@
     <title>Hero★Verse | Spider-Man</title>
     <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
